feat: refactorizacion de variables de entorno en cli, tipadas y por defecto

--- a/cli/package.json
+++ b/cli/package.json
@@ -5,7 +5,7 @@
   "license": "ISC",
   "private": false,
   "bin": {
-    "hexa": "./lib/index.js"
+    "bbyte": "./lib/index.js"
   },
   "type": "commonjs",
   "main": "./lib/index.js",
@@ -32,7 +32,7 @@
     "build": "npx tsc && npm run copy-banner",
     "npm:link": "npm run build && npm link",
     "npm:publish": "npm run build && npm publish --access public",
-    "yalc:install": "npx yalc add @bigbyte/utils && npm i",
+    "yalc:install": "npx yalc add @bigbyte/utils",
     "yalc:publish": "npm run build && npx yalc publish --push",
     "test": "npx tsc --project tsconfig.test.json && node --test dist/test",
     "test:one": "npx tsc --project tsconfig.test.json && node --test"
