--- a/cli/package.json
+++ b/cli/package.json
@@ -40,6 +40,7 @@
     "chokidar": "~4",
     "log-update": "~4",
     "reflect-metadata": "~0.2",
+    "ts-morph": "~26.0",
     "tslib": "~2"
   },
   "devDependencies": {
