--- a/logger/package.json
+++ b/logger/package.json
@@ -26,13 +26,15 @@
   },
   "scripts": {
     "build": "npx tsc",
-    "yalc:install": "npx yalc add @bigbyte/utils && npx yalc add @bigbyte/ioc",
+    "yalc:install": "npx yalc add @bigbyte/utils && npx yalc add @bigbyte/ioc && npx yalc add @bigbyte/events && npx yalc add @bigbyte/integration",
     "yalc:publish": "npm run build && npx yalc publish --push",
     "test": "npx tsc --project tsconfig.test.json && node --test dist/test"
   },
   "dependencies": {
     "@bigbyte/utils": "file:.yalc/@bigbyte/utils",
     "@bigbyte/ioc": "file:.yalc/@bigbyte/ioc",
+    "@bigbyte/events": "file:.yalc/@bigbyte/events",
+    "@bigbyte/integration": "file:.yalc/@bigbyte/integration",
     "reflect-metadata": "~0.2.2",
     "tslib": "~2.3",
     "zone.js": "~0.14"
