--- a/utils/package.json
+++ b/utils/package.json
@@ -35,6 +35,11 @@
       "import": "./lib/exception/index.js",
       "require": "./lib/exception/index.js",
       "types": "./lib/exception/index.d.js"
+    },
+    "./utilities": {
+      "import": "./lib/util/index.js",
+      "require": "./lib/util/index.js",
+      "types": "./lib/util/index.d.js"
     }
   },
   "typesVersions": {
@@ -53,6 +58,9 @@
       ],
       "exception": [
         "./lib/exception/index.d.js"
+      ],
+      "utilities": [
+        "./lib/util/index.d.js"
       ]
     }
   },
@@ -62,6 +70,7 @@
     "test": "npx tsc --project tsconfig.test.json && node --test dist/test"
   },
   "dependencies": {
+    "reflect-metadata": "~0.2.2",
     "chalk": "~5.4.1",
     "moment": "~2.30",
     "tslib": "~2.3",
