--- a/logger/package.json
+++ b/logger/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bigbyte/logger",
   "version": "0.1.0",
-  "author": "Jose Eduardo Soria Garcia",
+  "author": "Jose Eduardo Soria Garcia <alarifeproyect@gmail.com>",
   "license": "Apache 2.0",
   "private": false,
   "type": "commonjs",
