--- a/cli/package.json
+++ b/cli/package.json
@@ -2,7 +2,7 @@
   "name": "@bigbyte/cli",
   "version": "0.1.0",
   "author": "Jose Eduardo Soria Garcia <alarifeproyect@gmail.com>",
-  "license": "Apache 2.0",
+  "license": "Apache-2.0",
   "private": false,
   "bin": {
     "bbyte": "./lib/index.js"
@@ -27,9 +27,17 @@
       ]
     }
   },
+    "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ALARIFE-PROYECT/bigbyte.git"
+  },
+  "homepage": "https://github.com/ALARIFE-PROYECT/bigbyte#readme",
+  "bugs": {
+    "url": "https://github.com/ALARIFE-PROYECT/bigbyte/issues"
+  },
   "scripts": {
     "copy-banner": "node copy.js ./src/constant/banner.txt ./lib/constant/banner.txt",
-    "build": "npx tsc && npm run copy-banner",
+    "build": "npx tsc && npm run copy-banner && common add-license --path=./lib --ext=.js,.ts --project-name=@bigbyte/cli --project-author=Jose_Eduardo_Soria --project-license=Apache_2.0",
     "yalc:install": "npx yalc add @bigbyte/utils && npx yalc add @bigbyte/classpath && npx yalc add @bigbyte/integration",
     "yalc:publish": "npm run build && npx yalc publish --push",
     "test": "npx tsc --project tsconfig.test.json && node --test dist/test",
@@ -46,6 +54,7 @@
     "uuid": "~11.1"
   },
   "devDependencies": {
+    "@alarife/common": "~0.3.0",
     "@types/node": "~22",
     "typescript": "~5.9"
   }
