--- a/ctx/package.json
+++ b/ctx/package.json
@@ -2,7 +2,7 @@
   "name": "@bigbyte/ctx",
   "version": "0.1.0",
   "author": "Jose Eduardo Soria Garcia <alarifeproyect@gmail.com>",
-  "license": "Apache 2.0",
+  "license": "Apache-2.0",
   "private": false,
   "type": "commonjs",
   "main": "./lib/index.js",
@@ -24,8 +24,16 @@
       ]
     }
   },
+    "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ALARIFE-PROYECT/bigbyte.git"
+  },
+  "homepage": "https://github.com/ALARIFE-PROYECT/bigbyte#readme",
+  "bugs": {
+    "url": "https://github.com/ALARIFE-PROYECT/bigbyte/issues"
+  },
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc && common add-license --path=./lib --ext=.js,.ts --project-name=@bigbyte/ctx --project-author=Jose_Eduardo_Soria --project-license=Apache_2.0",
     "yalc:install": "npx yalc add @bigbyte/utils && npx yalc add @bigbyte/ioc",
     "yalc:publish": "npm run build && npx yalc publish --push",
     "test": "npx tsc --project tsconfig.test.json && node --test dist/test"
@@ -38,6 +46,7 @@
     "uuid": "~11.1"
   },
   "devDependencies": {
+    "@alarife/common": "~0.3.0",
     "@types/node": "~22",
     "typescript": "~5.9"
   }
