--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -21,9 +21,32 @@ permissions:
   contents: read
 
 jobs:
+  # merge-check:
+  #   name: Detect merge commit
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     is_merge: ${{ steps.chk.outputs.is_merge }}
+  #   steps:
+  #     - name: Evaluar mensaje de commit
+  #       id: chk
+  #       run: |
+  #         MSG="${GITHUB_HEAD_COMMIT_MESSAGE:-${GITHUB_EVENT_HEAD_COMMIT_MESSAGE:-}}"
+  #         # GitHub expone el mensaje en github.event.head_commit.message
+  #         # Lo tomamos directamente del contexto para mayor compatibilidad
+  #         MSG_CTX='${{ github.event.head_commit.message }}'
+  #         if echo "$MSG_CTX" | grep -E '^Merge pull request #' >/dev/null 2>&1; then
+  #           echo "is_merge=true" >> $GITHUB_OUTPUT
+  #           echo "Detectado merge commit: $MSG_CTX"
+  #         else
+  #           echo "is_merge=false" >> $GITHUB_OUTPUT
+  #           echo "No es merge commit: $MSG_CTX"
+  #         fi
+
   utils:
-    name: Publish @bigbyte/utils
+    name: '@bigbyte/utils'
     runs-on: ubuntu-latest
+    # needs: merge-check
+    # if: needs.merge-check.outputs.is_merge == 'true'
     concurrency:
       group: publish-bigbyte-utils
       cancel-in-progress: true
