--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -3,7 +3,7 @@ name: Publish @bigbyte packages
 on:
   push:
     branches:
-      - development
+      - main
     paths:
       - 'utils/**'
       # - 'IoC/**'
@@ -41,7 +41,7 @@ jobs:
   #         fi
 
   utils:
-    name: '@bigbyte/utils'
+    name: Publish utils
     runs-on: ubuntu-latest
     # needs: merge-check
     # if: needs.merge-check.outputs.is_merge == 'true'
