--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -22,9 +22,6 @@ jobs:
   utils:
     name: Publish @bigbyte/utils
     runs-on: ubuntu-latest
-    # concurrency:
-    #   group: publish-bigbyte-utils
-    #   cancel-in-progress: true
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,7 +40,7 @@ jobs:
         working-directory: utils
         run: npm run build
       - name: Publish
-        if: steps.version_check.outputs.exists == 'false'
+        # if: steps.version_check.outputs.exists == 'false'
         working-directory: utils
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
