--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -3,7 +3,7 @@ name: Publish @bigbyte packages
 on:
   push:
     branches:
-      - '**'
+      - 'main'
     paths:
       - 'utils/**'
       # - 'IoC/**'
