--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,3 +1,6 @@
+# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
+# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
+
 name: Publish @bigbyte packages
 
 on:
@@ -7,13 +10,15 @@ on:
     paths:
       - 'utils/**'
 
-permissions:
-  contents: read
-
 jobs:
-  utils:
+  publish-npm:
     name: Publish @bigbyte/utils
     runs-on: ubuntu-latest
+    concurrency:
+      group: publish-common
+      cancel-in-progress: true
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -28,11 +33,49 @@ jobs:
       - name: Install
         working-directory: utils
         run: npm install
-      - name: Build
-        working-directory: utils
-        run: npm run build
-      - name: Publish
-        working-directory: utils
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish --access public
+      # - name: Publish @alarife/common
+      #   working-directory: alarife-common
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      #   run: |
+      #     npm publish --access public
+
+
+# name: Publish @bigbyte packages
+
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - 'utils/**'
+
+# permissions:
+#   contents: read
+
+# jobs:
+#   utils:
+#     name: Publish @bigbyte/utils
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
+#         with:
+#           fetch-depth: 0
+#       - name: Setup Node
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: 22
+#           registry-url: https://registry.npmjs.org/
+#           always-auth: true
+#       - name: Install
+#         working-directory: utils
+#         run: npm install
+#       - name: Build
+#         working-directory: utils
+#         run: npm run build
+#       - name: Publish
+#         working-directory: utils
+#         env:
+#           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+#         run: npm publish --access public
