feat: ci/cd para todos los paquetes

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -12,8 +12,8 @@ permissions:
   contents: read
 
 jobs:
-  utils:
-    name: Publish @bigbyte/utils
+  classpath:
+    name: Publish @bigbyte/classpath
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -27,13 +27,143 @@ jobs:
           registry-url: https://registry.npmjs.org/
           always-auth: true
       - name: Install
-        working-directory: utils
+        working-directory: classpath
         run: npm install
       - name: Build
-        working-directory: utils
+        working-directory: classpath
         run: npm run build
       - name: Publish
-        working-directory: utils
+        working-directory: classpath
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --access public
+
+  cli:
+    name: Publish @bigbyte/cli
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          registry-url: https://registry.npmjs.org/
+          always-auth: true
+      - name: Install
+        working-directory: cli
+        run: npm install
+      - name: Build
+        working-directory: cli
+        run: npm run build
+      - name: Publish
+        working-directory: cli
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --access public
+
+  core:
+    name: Publish @bigbyte/core
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          registry-url: https://registry.npmjs.org/
+          always-auth: true
+      - name: Install
+        working-directory: core
+        run: npm install
+      - name: Build
+        working-directory: core
+        run: npm run build
+      - name: Publish
+        working-directory: core
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --access public
+
+  ctx:
+    name: Publish @bigbyte/ctx
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          registry-url: https://registry.npmjs.org/
+          always-auth: true
+      - name: Install
+        working-directory: ctx
+        run: npm install
+      - name: Build
+        working-directory: ctx
+        run: npm run build
+      - name: Publish
+        working-directory: ctx
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --access public
+
+  events:
+    name: Publish @bigbyte/events
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          registry-url: https://registry.npmjs.org/
+          always-auth: true
+      - name: Install
+        working-directory: events
+        run: npm install
+      - name: Build
+        working-directory: events
+        run: npm run build
+      - name: Publish
+        working-directory: events
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --access public
+
+  integration:
+    name: Publish @bigbyte/integration
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          registry-url: https://registry.npmjs.org/
+          always-auth: true
+      - name: Install
+        working-directory: integration
+        run: npm install
+      - name: Build
+        working-directory: integration
+        run: npm run build
+      - name: Publish
+        working-directory: integration
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm publish --access public
@@ -60,6 +190,58 @@ jobs:
         run: npm run build
       - name: Publish
         working-directory: ioc
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --access public
+
+  logger:
+    name: Publish @bigbyte/logger
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          registry-url: https://registry.npmjs.org/
+          always-auth: true
+      - name: Install
+        working-directory: logger
+        run: npm install
+      - name: Build
+        working-directory: logger
+        run: npm run build
+      - name: Publish
+        working-directory: logger
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --access public
+
+  utils:
+    name: Publish @bigbyte/utils
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          registry-url: https://registry.npmjs.org/
+          always-auth: true
+      - name: Install
+        working-directory: utils
+        run: npm install
+      - name: Build
+        working-directory: utils
+        run: npm run build
+      - name: Publish
+        working-directory: utils
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm publish --access public
