--- a/classpath/package.json
+++ b/classpath/package.json
@@ -55,7 +55,7 @@
     "test": "npx tsc --project tsconfig.test.json && node --test dist/test"
   },
   "dependencies": {
-    "@bigbyte/utils": "file:.yalc/@bigbyte/utils",
+    "@bigbyte/utils": "0.5.0",
     "ts-morph": "~26.0.0",
     "tslib": "~2.3",
     "uuid": "~11.1.0",
