--- a/core/package.json
+++ b/core/package.json
@@ -39,11 +39,11 @@
     "test": "npx tsc --project tsconfig.test.json && node --test dist/test"
   },
   "dependencies": {
-    "@bigbyte/utils": "file:.yalc/@bigbyte/utils",
+    "@bigbyte/utils": "0.5.0",
     "@bigbyte/ioc": "file:.yalc/@bigbyte/ioc",
     "@bigbyte/ctx": "file:.yalc/@bigbyte/ctx",
     "@bigbyte/classpath": "file:.yalc/@bigbyte/classpath",
-    "@bigbyte/events": "file:.yalc/@bigbyte/events",
+    "@bigbyte/events": "0.5.0",
     "chokidar": "~4.0.3",
     "reflect-metadata": "~0.2.2",
     "tslib": "~2.3",
