--- a/ctx/package.json
+++ b/ctx/package.json
@@ -39,7 +39,7 @@
     "test": "npx tsc --project tsconfig.test.json && node --test dist/test"
   },
   "dependencies": {
-    "@bigbyte/utils": "file:.yalc/@bigbyte/utils",
+    "@bigbyte/utils": "0.5.0",
     "@bigbyte/ioc": "file:.yalc/@bigbyte/ioc",
     "tslib": "~2.3",
     "zone.js": "~0.14",
