--- a/integration/package.json
+++ b/integration/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigbyte/integration",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "author": "Jose Eduardo Soria Garcia <alarifeproyect@gmail.com>",
   "license": "Apache-2.0",
   "private": false,
@@ -39,7 +39,7 @@
     "test": "npx tsc --project tsconfig.test.json && node --test dist/test"
   },
   "dependencies": {
-    "@bigbyte/utils": "file:.yalc/@bigbyte/utils",
+    "@bigbyte/utils": "0.5.0",
     "tslib": "~2.3",
     "zone.js": "~0.14"
   },
