--- a/core/package.json
+++ b/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigbyte/core",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "author": "Jose Eduardo Soria Garcia <alarifeproyect@gmail.com>",
   "license": "Apache-2.0",
   "private": false,
@@ -40,9 +40,9 @@
   },
   "dependencies": {
     "@bigbyte/utils": "0.5.0",
-    "@bigbyte/ioc": "file:.yalc/@bigbyte/ioc",
-    "@bigbyte/ctx": "file:.yalc/@bigbyte/ctx",
-    "@bigbyte/classpath": "file:.yalc/@bigbyte/classpath",
+    "@bigbyte/ioc": "0.5.0",
+    "@bigbyte/ctx": "0.5.0",
+    "@bigbyte/classpath": "0.5.0",
     "@bigbyte/events": "0.5.0",
     "chokidar": "~4.0.3",
     "reflect-metadata": "~0.2.2",
