--- a/ctx/package.json
+++ b/ctx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigbyte/ctx",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "author": "Jose Eduardo Soria Garcia <alarifeproyect@gmail.com>",
   "license": "Apache-2.0",
   "private": false,
@@ -40,7 +40,7 @@
   },
   "dependencies": {
     "@bigbyte/utils": "0.5.0",
-    "@bigbyte/ioc": "file:.yalc/@bigbyte/ioc",
+    "@bigbyte/ioc": "0.5.0",
     "tslib": "~2.3",
     "zone.js": "~0.14",
     "uuid": "~11.1"
