--- a/logger/package.json
+++ b/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigbyte/logger",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "author": "Jose Eduardo Soria Garcia <alarifeproyect@gmail.com>",
   "license": "Apache-2.0",
   "private": false,
@@ -39,10 +39,10 @@
     "test": "npx tsc --project tsconfig.test.json && node --test dist/test"
   },
   "dependencies": {
-    "@bigbyte/utils": "file:.yalc/@bigbyte/utils",
-    "@bigbyte/ioc": "file:.yalc/@bigbyte/ioc",
-    "@bigbyte/events": "file:.yalc/@bigbyte/events",
-    "@bigbyte/integration": "file:.yalc/@bigbyte/integration",
+    "@bigbyte/utils": "0.5.0",
+    "@bigbyte/ioc": "0.5.0",
+    "@bigbyte/events": "0.5.0",
+    "@bigbyte/integration": "0.5.0",
     "reflect-metadata": "~0.2.2",
     "tslib": "~2.3",
     "zone.js": "~0.14"
